# multi-engine-data-stack-arrow-flight

./: .gitignore  iceberg_over_flight.py  pyproject.toml
dbt_xorq_project/: dbt_project.yml
dbt_xorq_project/models/examples/: first_model.sql  schema.yml
dbt_xorq_project/models/xorq/: first_model.sql  sources.yml  test_write_model.sql
dbt_xorq_project/plugins/: flight.py
