[project]
name = "multi-engine-data-stack-arrow-flight"
version = "0.0.0"
description = "experimentation with xorq and dbt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.2",
    "pyiceberg[sql-sqlite]>=0.9.0",
    "xorq>=0.1.17",
    "urllib3>=2.2.3",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "multi-engine-data-stack-arrow-flight",
    "ruff>=0.6.7",
]

[tool.setuptools]
py-modules = ["dbt_xorq_project"]

[tool.uv.sources]
multi-engine-data-stack-arrow-flight = { workspace = true }
